// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowItem rendering tests with description - test 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
    data-slot="card"
    data-testid="workflow-item"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
        >
          3
           Schritte
        </span>
      </div>
      <a
        class="group/title"
        data-testid="view-details-link"
        href="/workflows/workflow-id-0001"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-git-branch h-4 w-4 shrink-0 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="6"
              x2="6"
              y1="3"
              y2="15"
            />
            <circle
              cx="18"
              cy="6"
              r="3"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <path
              d="M18 9a9 9 0 0 1-9 9"
            />
          </svg>
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title-1
          </h4>
        </div>
      </a>
    </div>
    <div
      class="flex-1 px-5 pt-0 pb-3"
      data-slot="card-content"
      data-testid="description"
    >
      <p
        class="line-clamp-3 text-sm leading-relaxed text-slate-700"
      >
        description 1
      </p>
    </div>
    <div
      class="flex items-center justify-end border-t border-slate-200 px-5 py-3"
    >
      <div
        class="flex items-center gap-2 opacity-0 transition-opacity group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100 [@media(hover:none)]:opacity-100"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
          data-slot="button"
          data-testid="run-workflow-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-play mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
            />
          </svg>
          Anwenden
        </button>
        <div
          data-slot="dropdown-menu"
          data-testid="workflow-more-options-btn"
        >
          <button
            aria-label="Weitere Optionen"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
            data-slot="dropdown-menu-trigger"
            data-state="false"
            data-testid="more-options-trigger-btn"
            title="Weitere Optionen"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowItem rendering tests without description - test 1`] = `
<div>
  <div
    class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
    data-slot="card"
    data-testid="workflow-item"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
        >
          3
           Schritte
        </span>
      </div>
      <a
        class="group/title"
        data-testid="view-details-link"
        href="/workflows/workflow-id-0001"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-git-branch h-4 w-4 shrink-0 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="6"
              x2="6"
              y1="3"
              y2="15"
            />
            <circle
              cx="18"
              cy="6"
              r="3"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <path
              d="M18 9a9 9 0 0 1-9 9"
            />
          </svg>
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title-1
          </h4>
        </div>
      </a>
    </div>
    <div
      class="flex-1 px-5 pt-0 pb-3"
      data-slot="card-content"
      data-testid="description"
    />
    <div
      class="flex items-center justify-end border-t border-slate-200 px-5 py-3"
    >
      <div
        class="flex items-center gap-2 opacity-0 transition-opacity group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100 [@media(hover:none)]:opacity-100"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
          data-slot="button"
          data-testid="run-workflow-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-play mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
            />
          </svg>
          Anwenden
        </button>
        <div
          data-slot="dropdown-menu"
          data-testid="workflow-more-options-btn"
        >
          <button
            aria-label="Weitere Optionen"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
            data-slot="dropdown-menu-trigger"
            data-state="false"
            data-testid="more-options-trigger-btn"
            title="Weitere Optionen"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
